--- a/public/nicolas/resume.html
+++ b/public/nicolas/resume.html
@@ -2,201 +2,307 @@
   <head>
     <meta charset="utf-8" />
     <title>Nicolas' Resume</title>
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./modern-reset.css" />
     <link rel="stylesheet" type="text/css" href="./nicolas-resume.css" />
     <link rel="stylesheet" type="text/css" href="./print-resume.css" />
   </head>
 
   <body>
-    <header>
-      <h1>Nicolas Zozol</h1>
+    <div class="cv-page">
+      <header>
+        <h1>Nicolas Zozol</h1>
 
-      <section class="title">
-        Freelance Developer and Architect - Toptaler - Oracle Certified Java
-        Master
-      </section>
+        <section class="title">
+          Freelance Developer and Architect - Toptaler - Oracle Certified Java
+          Master
+        </section>
 
-      <section class="icon-list">
-        <div>
-          <img src="./feather/phone.svg" />
-          <span>+33 6 33 91 85 04</span>
-        </div>
-        <div>
-          <img src="./feather/at-sign.svg" />
-          <span>nzozol@gmail.com</span>
-        </div>
-        <div>
-          <img src="./feather/link.svg" />
-          <span>https://www.robusta.build</span>
-        </div>
-        <div>
-          <img src="./feather/map-pin.svg" />
-          <span>Toulouse, France - Remote</span>
-        </div>
-      </section>
-    </header>
+        <ul class="icon-list">
+          <li>
+            <i data-feather="phone"></i>
+            <span>+33 6 33 91 85 04</span>
+          </li>
+          <li>
+            <i data-feather="at-sign"></i>
+            <span>nicolas@robusta.build</span>
+          </li>
+          <li>
+            <i data-feather="link"></i>
+            <span>https://www.robusta.build</span>
+          </li>
+          <li>
+            <i data-feather="map-pin"></i>
+            <span>Toulouse, France - Remote</span>
+          </li>
+        </ul>
+      </header>
 
-    <div class="main-container page">
-      <main class="content">
-        <section class="projects">
-          <div class="project">
-            <h2>Swaap Finance</h2>
-            <div class="project-subtitle">Blockchain project</div>
-            <div>
-              <div class="project-dates">2020 - 2021</div>
-              <div class="project-location">Paris, Remote</div>
+      <div class="main-container page">
+        <main class="content">
+          <section class="flagship">
+            <h2>Flagship</h2>
+
+            <div class="project">
+              <h3>Open source lead developer</h3>
+              <div class="project-subtitle">Masala Parser</div>
+              <div class="project-precisions">
+                <div class="project-dates">
+                  <i data-feather="calendar"></i>2013 - 2024
+                </div>
+                <div class="project-location">
+                  <i data-feather="map-pin"></i>Github, Remote
+                </div>
+              </div>
+              <p>
+                Based on the famous Parsec on Haskell platform, this project
+                enable anybody to build a simple parser to replace awful regex,
+                or make a full new sophisticated compiler.
+              </p>
+
+              <ul class="project-items">
+                <li>140+ stars on Github</li>
+                <li>
+                  8 contributors to the project, including top-notch specialists
+                  on parsing,
+                </li>
+                <li>Typescript, CI/CD, TDD</li>
+              </ul>
             </div>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-              eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-              tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-            </p>
+          </section>
 
-            <ul class="project-items">
-              <li>Did that stuff for grate result</li>
-              <li>Did that stuff for grate result</li>
+          <section class="projects">
+            <h2>Projects</h2>
+
+            <div class="project">
+              <h3>Web3 developer</h3>
+              <div class="project-subtitle">Swaap Finance</div>
+              <div class="project-precisions">
+                <div class="project-dates">
+                  <i data-feather="calendar"></i>2021 - 2024
+                </div>
+                <div class="project-location">
+                  <i data-feather="map-pin"></i>Remote, Paris
+                </div>
+              </div>
+
+              <p>
+                I was the first employee of Swaap Finance,a crypto start-up in
+                the very concurrential environment of market-maker for crypto
+                assets. After three years, we were able to find the good market
+                fit.
+              </p>
+
+              <ul class="project-items">
+                <li>
+                  Grew the code from a demo to a multisite web3 platform
+                  monorepo
+                </li>
+                <li>Faced all the challenges of an immature ecosystem</li>
+                <li>
+                  React, Typescript, web3.js, ethers.js, Airtable, TheGraph...
+                </li>
+              </ul>
+            </div>
+
+            <div class="project">
+              <h3>Frontend developer</h3>
+              <div class="project-subtitle">Diool payments</div>
+              <div class="project-precisions">
+                <div class="project-dates">
+                  <i data-feather="calendar"></i>2019 - 2021
+                </div>
+                <div class="project-location">
+                  <i data-feather="map-pin"></i>Remote
+                </div>
+              </div>
+
+              <p>
+                Working with Toptal elite agency, Diool is a mobile payments
+                startup in Cameroon, aiming to be the leader of mobile payments
+                in the country.
+              </p>
+
+              <ul class="project-items">
+                <li>
+                  Migrated from AngularJS to a modern and maintanable Angular
+                  application
+                </li>
+                <li>Angular, Typescript, D3.js</li>
+              </ul>
+            </div>
+
+            <div class="project">
+              <h3>BCG Consultant</h3>
+              <div class="project-subtitle">Boston Consulting Group</div>
+              <div class="project-precisions">
+                <div class="project-dates">
+                  <i data-feather="calendar"></i>2018 - 2019
+                </div>
+                <div class="project-location">
+                  <i data-feather="map-pin"></i>Remote
+                </div>
+              </div>
+
+              <p>
+                Working with Toptal, I supervised the development of a new CMS
+                platform for all the BCG.com facing website.
+              </p>
+
+              <ul class="project-items">
+                <li>API creation</li>
+                <li>Data extraction for the AI team</li>
+                <li>Java, Webdriver IO</li>
+              </ul>
+            </div>
+
+            <div class="project">
+              <h3>Project 2</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
+                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
+                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
+              </p>
+            </div>
+
+            <hr class="jump" />
+
+            <div class="project">
+              <h3>Project 3</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
+                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
+              </p>
+            </div>
+
+            <div class="project">
+              <h3>Project 4</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
+                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
+              </p>
+            </div>
+
+            <div class="project">
+              <h3>Project 5</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
+                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
+                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
+              </p>
+            </div>
+
+            <div class="project">
+              <h3>Project 6</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
+                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
+              </p>
+            </div>
+
+            <div class="project">
+              <h3>Project 7</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
+                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
+              </p>
+            </div>
+
+            <div class="project">
+              <h3>Project 1</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
+                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
+              </p>
+            </div>
+          </section>
+        </main>
+        <aside class="sidebar">
+          <section class="skills">
+            <div class="skill-category">Backend</div>
+
+            <ul class="skill-list">
+              <li>Java</li>
+              <li>Spring</li>
+              <li>Node JS</li>
+              <li>SQL</li>
+              <li>PHP/Symfony</li>
+              <li>MongoDB</li>
             </ul>
-          </div>
 
-          <div class="project">
-            <h2>Project 2</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-              eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-              tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-              eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-              tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-            </p>
-          </div>
+            <div class="skill-category">Frontend</div>
 
-          <hr class="jump" />
+            <ul class="skill-list">
+              <li>Typescript</li>
+              <li>React JS</li>
+              <li>Angular</li>
+              <li>CSS/SASS</li>
+              <li>Styled Component</li>
+              <li>Responsive Design</li>
+            </ul>
+          </section>
 
-          <div class="project">
-            <h2>Project 3</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-              eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-              tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-            </p>
-          </div>
-
-          <div class="project">
-            <h2>Project 4</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-              eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-              tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-            </p>
-          </div>
-
-          <div class="project">
-            <h2>Project 5</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-              eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-              tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-              eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-              tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-            </p>
-          </div>
-
-          <div class="project">
-            <h2>Project 6</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-              eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-              tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-            </p>
-          </div>
-
-          <div class="project">
-            <h2>Project 7</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-              eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-              tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-            </p>
-          </div>
-
-          <div class="project">
-            <h2>Project 1</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-              eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-              tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-            </p>
-          </div>
-        </section>
-      </main>
-      <aside class="sidebar">
-        <section class="skills">
-          <div class="skill-category">Backend</div>
-
-          <ul class="skill-list">
-            <li>Java</li>
-            <li>Spring</li>
-            <li>Node JS</li>
-            <li>SQL</li>
-            <li>PHP/Symfony</li>
-            <li>MongoDB</li>
-          </ul>
-
-          <div class="skill-category">Frontend</div>
-
-          <ul class="skill-list">
-            <li>Typescript</li>
-            <li>React JS</li>
-            <li>Angular</li>
-            <li>CSS/SASS</li>
-            <li>Styled Component</li>
-            <li>Responsive Design</li>
-          </ul>
-        </section>
-
-        <!-- Sidebar content like skills and diplomas -->
-        <section class="education">
-          <h2>Education</h2>
-          <div class="item">
-            <div class="item-title">Oracle Certified Java Master</div>
-            <div class="item-subtitle">Oracle</div>
-            <div class="item-date">2011</div>
-          </div>
-          <div class="item">
-            <div class="item-title">Computing Science bachelor degree</div>
-            <div class="item-subtitle">Université de Marseille</div>
-            <div class="item-date">2001</div>
-          </div>
-          <div class="item">
-            <div class="item-title">English Bilingual</div>
-            <div class="item-subtitle">Living 3 years in USA</div>
-          </div>
-        </section>
-
-        <section class="humanities">
-          <h2>Community</h2>
-          <div class="item">
-            <div class="item-title">Toptal</div>
-            <div class="item-subtitle">Screened by Toptal 3% selection</div>
-          </div>
-          <div class="item">
-            <div class="item-title">Stack Overflow</div>
-            <div class="item-subtitle">
-              6000+ pts - Java & Javascript badges
+          <!-- Sidebar content like skills and diplomas -->
+          <section class="education">
+            <h2>Education</h2>
+            <div class="item">
+              <div class="item-title">Oracle Certified Java Master</div>
+              <div class="item-subtitle">Oracle</div>
+              <div class="item-date">2011</div>
             </div>
-          </div>
-          <div class="item">
-            <div class="item-title">Toulouse Java User Group</div>
-            <div class="item-subtitle">Meetup Organizer</div>
-          </div>
-        </section>
-      </aside>
+            <div class="item">
+              <div class="item-title">Computing Science bachelor degree</div>
+              <div class="item-subtitle">Université de Marseille</div>
+              <div class="item-date">2001</div>
+            </div>
+            <div class="item">
+              <div class="item-title">English Bilingual</div>
+              <div class="item-subtitle">Living 3 years in USA</div>
+            </div>
+          </section>
+
+          <section class="humanities">
+            <h2>Community</h2>
+            <div class="item">
+              <div class="item-title">Toptal</div>
+              <div class="item-subtitle">Screened by Toptal 3% selection</div>
+            </div>
+            <div class="item">
+              <div class="item-title">Stack Overflow</div>
+              <div class="item-subtitle">
+                6000+ pts - Java & Javascript badges
+              </div>
+            </div>
+            <div class="item">
+              <div class="item-title">Toulouse Java User Group</div>
+              <div class="item-subtitle">Meetup Organizer</div>
+            </div>
+          </section>
+        </aside>
+      </div>
     </div>
   </body>
+  <script>
+    console.log(feather)
+    feather.replace()
+  </script>
 </html>
