feat: Finishing content, that really need a refresh

--- a/public/nicolas/resume.html
+++ b/public/nicolas/resume.html
@@ -161,86 +161,108 @@
             </div>
 
             <div class="project">
-              <h3>Project 2</h3>
+              <h3>BCG Consultant</h3>
+              <div class="project-subtitle">Boston Consulting Group</div>
+              <div class="project-precisions">
+                <div class="project-dates">
+                  <i data-feather="calendar"></i>2018 - 2019
+                </div>
+                <div class="project-location">
+                  <i data-feather="map-pin"></i>Remote
+                </div>
+              </div>
+
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
+                Working with Toptal, I supervised the development of a new CMS
+                platform for all the BCG.com facing website.
               </p>
+
+              <ul class="project-items">
+                <li>API creation</li>
+                <li>Data extraction for the AI team</li>
+                <li>Java, Webdriver IO</li>
+              </ul>
+            </div>
+
+            <div class="project">
+              <h3>ReactJS Developer</h3>
+              <div class="project-subtitle">Nauto AI</div>
+              <div class="project-precisions">
+                <div class="project-dates">
+                  <i data-feather="calendar"></i>2019
+                </div>
+                <div class="project-location">
+                  <i data-feather="map-pin"></i>Remote
+                </div>
+              </div>
+
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
+                Nauto is an AI scaleup. As a freelance, I was in charge to
+                integrate AI alarms signals in a Dashboard
+              </p>
+
+              <ul class="project-items">
+                <li>Api design</li>
+                <li>ReactJS, D3.js</li>
+                <li>Java, Webdriver IO</li>
+              </ul>
+            </div>
+
+            <div class="project">
+              <h3>Happy Frelancer</h3>
+              <div class="project-subtitle">Robusta Build</div>
+              <div class="project-precisions">
+                <div class="project-dates">
+                  <i data-feather="calendar"></i>2007-2024
+                </div>
+                <div class="project-location">
+                  <i data-feather="map-pin"></i>Remote
+                </div>
+              </div>
+
+              <p>
+                I'm a happy freelancer, starting a few startup projects, working
+                with Training agencies, making crypto bots in 2017, or joining
+                Toptal in 2018.
+              </p>
+
+              <ul class="project-items">
+                <li>Java EE, Servlets, Glassfish</li>
+                <li>ReactJS, AngularJS, ExtJS, PrototypeJS</li>
+              </ul>
+            </div>
+
+            <div class="project">
+              <h3>Science Teacher</h3>
+              <div class="project-subtitle">
+                Education Nationale, Internatinal School of Boston
+              </div>
+              <div class="project-precisions">
+                <div class="project-dates">
+                  <i data-feather="calendar"></i>2000-2007
+                </div>
+                <div class="project-location">
+                  <i data-feather="map-pin"></i>France, USA
+                </div>
+              </div>
+
+              <p>
+                I was a science teacher in French then US high school, also a
+                summer camp director, or even a chess teacher.
               </p>
             </div>
 
             <hr class="jump" />
-
-            <div class="project">
-              <h3>Project 3</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-              </p>
-            </div>
-
-            <div class="project">
-              <h3>Project 4</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-              </p>
-            </div>
-
-            <div class="project">
-              <h3>Project 5</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-              </p>
-            </div>
-
-            <div class="project">
-              <h3>Project 6</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-              </p>
-            </div>
-
-            <div class="project">
-              <h3>Project 7</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-              </p>
-            </div>
-
-            <div class="project">
-              <h3>Project 1</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                eget nunc nec nunc tincidunt lacinia. Nullam eget nunc nec nunc
-                tincidunt lacinia. Nullam eget nunc nec nunc tincidunt lacinia.
-              </p>
-            </div>
           </section>
         </main>
         <aside class="sidebar">
+          <h2>Skills</h2>
+
           <section class="skills">
-            <div class="skill-category">Backend</div>
+            <h3 class="skill-category">Backend</h3>
 
             <ul class="skill-list">
+              <li>API design</li>
               <li>Java</li>
               <li>Spring</li>
               <li>Node JS</li>
@@ -249,7 +271,7 @@
               <li>MongoDB</li>
             </ul>
 
-            <div class="skill-category">Frontend</div>
+            <h3 class="skill-category">Frontend</h3>
 
             <ul class="skill-list">
               <li>Typescript</li>
@@ -264,18 +286,38 @@
           <!-- Sidebar content like skills and diplomas -->
           <section class="education">
             <h2>Education</h2>
+
             <div class="item">
-              <div class="item-title">Oracle Certified Java Master</div>
+              <h3>Oracle Certified Java Master</h3>
               <div class="item-subtitle">Oracle</div>
-              <div class="item-date">2011</div>
+              <div class="item-precisions">
+                <div class="item-dates">
+                  <i data-feather="calendar"></i>2011
+                </div>
+              </div>
             </div>
             <div class="item">
-              <div class="item-title">Computing Science bachelor degree</div>
+              <h3>Computer Science bachelor degree</h3>
               <div class="item-subtitle">Université de Marseille</div>
-              <div class="item-date">2001</div>
+              <div class="item-precisions">
+                <div class="item-dates">
+                  <i data-feather="calendar"></i>2001
+                </div>
+              </div>
             </div>
+
             <div class="item">
-              <div class="item-title">English Bilingual</div>
+              <h3>Science teacher concours</h3>
+              <div class="item-subtitle">République française</div>
+              <div class="item-precisions">
+                <div class="item-dates">
+                  <i data-feather="calendar"></i>2001
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <h3>English Bilingual</h3>
               <div class="item-subtitle">Living 3 years in USA</div>
             </div>
           </section>
@@ -283,17 +325,17 @@
           <section class="humanities">
             <h2>Community</h2>
             <div class="item">
-              <div class="item-title">Toptal</div>
+              <h3 class="item-title">Toptal</h3>
               <div class="item-subtitle">Screened by Toptal 3% selection</div>
             </div>
             <div class="item">
-              <div class="item-title">Stack Overflow</div>
+              <h3 class="item-title">Stack Overflow</h3>
               <div class="item-subtitle">
                 6000+ pts - Java & Javascript badges
               </div>
             </div>
             <div class="item">
-              <div class="item-title">Toulouse Java User Group</div>
+              <h3 class="item-title">Toulouse Java User Group</h3>
               <div class="item-subtitle">Meetup Organizer</div>
             </div>
           </section>
