feat: Writing quality content

--- a/public/nicolas/resume.html
+++ b/public/nicolas/resume.html
@@ -18,8 +18,10 @@
         <h1>Nicolas Zozol</h1>
 
         <section class="title">
-          Freelance Developer and Architect - Toptaler - Oracle Certified Java
-          Master
+          Freelance CTO & Senior Developer for Startups
+        </section>
+        <section class="title second-title">
+          Screened by Toptal - Oracle Certified Java Master
         </section>
 
         <ul class="icon-list">
@@ -59,16 +61,16 @@
                 </div>
               </div>
               <p>
-                Based on the famous Parsec on Haskell platform, this project
-                enable anybody to build a simple parser to replace awful regex,
-                or make a full new sophisticated compiler.
+                Based on the well-known Parsec library for Haskell, this tool
+                enables users to effortlessly create parsers, from simple regex
+                alternatives to fully featured compilers.
               </p>
 
               <ul class="project-items">
-                <li>140+ stars on Github</li>
+                <li>Earned over 140 GitHub stars</li>
                 <li>
-                  8 contributors to the project, including top-notch specialists
-                  on parsing,
+                  Supported by 8 contributors, including experts in parsing and
+                  compiler design
                 </li>
                 <li>Typescript, CI/CD, TDD</li>
               </ul>
@@ -91,10 +93,9 @@
               </div>
 
               <p>
-                I was the first employee of Swaap Finance,a crypto start-up in
-                the very concurrential environment of market-maker for crypto
-                assets. After three years, we were able to find the good market
-                fit.
+                As Swaap Finance's first employee, I wrote the technical
+                solutions helping the company establish a clear market fit
+                within three years, in a very competitive environment.
               </p>
 
               <ul class="project-items">
@@ -122,15 +123,15 @@
               </div>
 
               <p>
-                Working with Toptal elite agency, Diool is a mobile payments
-                startup in Cameroon, aiming to be the leader of mobile payments
-                in the country.
+                Through the Toptal network, I contributed to Diool, a
+                Cameroonian start-up working to become the leading mobile
+                payments provider in the country.
               </p>
 
               <ul class="project-items">
                 <li>
-                  Migrated from AngularJS to a modern and maintanable Angular
-                  application
+                  Upgraded legacy AngularJS to a maintainable Angular
+                  application.
                 </li>
                 <li>Angular, Typescript, D3.js</li>
               </ul>
@@ -149,32 +150,9 @@
               </div>
 
               <p>
-                Working with Toptal, I supervised the development of a new CMS
-                platform for all the BCG.com facing website.
-              </p>
-
-              <ul class="project-items">
-                <li>API creation</li>
-                <li>Data extraction for the AI team</li>
-                <li>Java, Webdriver IO</li>
-              </ul>
-            </div>
-
-            <div class="project">
-              <h3>BCG Consultant</h3>
-              <div class="project-subtitle">Boston Consulting Group</div>
-              <div class="project-precisions">
-                <div class="project-dates">
-                  <i data-feather="calendar"></i>2018 - 2019
-                </div>
-                <div class="project-location">
-                  <i data-feather="map-pin"></i>Remote
-                </div>
-              </div>
-
-              <p>
-                Working with Toptal, I supervised the development of a new CMS
-                platform for all the BCG.com facing website.
+                Through the Toptal network, I supervised the development of a
+                modern CMS platform for BCG.com facing website, ensuring high
+                standards and functionalities.
               </p>
 
               <ul class="project-items">
@@ -197,8 +175,9 @@
               </div>
 
               <p>
-                Nauto is an AI scaleup. As a freelance, I was in charge to
-                integrate AI alarms signals in a Dashboard
+                In my freelance role at Nauto, an AI scale-up, I integrated
+                alarm signals into the dashboard, providing an interface for
+                real-time monitoring
               </p>
 
               <ul class="project-items">
@@ -209,7 +188,7 @@
             </div>
 
             <div class="project">
-              <h3>Happy Frelancer</h3>
+              <h3>Happy Freelancer</h3>
               <div class="project-subtitle">Robusta Build</div>
               <div class="project-precisions">
                 <div class="project-dates">
@@ -221,9 +200,9 @@
               </div>
 
               <p>
-                I'm a happy freelancer, starting a few startup projects, working
-                with Training agencies, making crypto bots in 2017, or joining
-                Toptal in 2018.
+                Since becoming a freelancer, I’ve engaged in various startup
+                projects, worked with training agencies, created crypto bots in
+                2017, and joined Toptal's elite network in 2018.
               </p>
 
               <ul class="project-items">
@@ -247,12 +226,13 @@
               </div>
 
               <p>
-                I was a science teacher in French then US high school, also a
-                summer camp director, or even a chess teacher.
+                I’ve worked as a science teacher in both French and U.S. high
+                schools, directed a summer camp, and taught chess, engaging
+                students across varied settings.
               </p>
             </div>
 
-            <hr class="jump" />
+            <!--hr class="jump" /-->
           </section>
         </main>
         <aside class="sidebar">
