--- a/public/nicolas/resume.html
+++ b/public/nicolas/resume.html
@@ -17,9 +17,7 @@
       <header>
         <h1>Nicolas Zozol</h1>
 
-        <section class="title">
-          Freelance CTO & Senior Developer for Startups
-        </section>
+        <section class="title">Principal Engineer & CTO for Startups</section>
         <section class="title second-title">
           Screened by Toptal - Oracle Certified Java Master
         </section>
@@ -103,7 +101,10 @@
                   Grew the code from a demo to a multisite web3 platform
                   monorepo
                 </li>
-                <li>Faced all the challenges of an immature ecosystem</li>
+                <li>
+                  Grew the TVL from 0 to 5M$ in a competitive and immature
+                  ecosystem
+                </li>
                 <li>
                   React, Typescript, web3.js, ethers.js, Airtable, TheGraph...
                 </li>
@@ -156,7 +157,9 @@
               </p>
 
               <ul class="project-items">
-                <li>API creation</li>
+                <li>
+                  Saved $25,000+ in consulting fees by switching to an ETL
+                </li>
                 <li>Data extraction for the AI team</li>
                 <li>Java, Webdriver IO</li>
               </ul>
