feat: resume-crypto

--- a/public/nicolas/resume-crypto.html
+++ b/public/nicolas/resume-crypto.html
@@ -46,38 +46,6 @@
         <main class="content">
           <section class="flagship">
             <h2>Flagship</h2>
-
-            <div class="project">
-              <h3>Open source lead developer</h3>
-              <div class="project-subtitle">Masala Parser</div>
-              <div class="project-precisions">
-                <div class="project-dates">
-                  <i data-feather="calendar"></i>2013 - 2024
-                </div>
-                <div class="project-location">
-                  <i data-feather="map-pin"></i>Github, Remote
-                </div>
-              </div>
-              <p>
-                Based on the well-known Parsec library for Haskell, this tool
-                enables users to effortlessly create parsers, from simple regex
-                alternatives to fully featured compilers.
-              </p>
-
-              <ul class="project-items">
-                <li>Earned over 140 GitHub stars</li>
-                <li>
-                  Supported by 8 contributors, including experts in parsing and
-                  compiler design
-                </li>
-                <li>Typescript, CI/CD, TDD</li>
-              </ul>
-            </div>
-          </section>
-
-          <section class="projects">
-            <h2>Projects</h2>
-
             <div class="project">
               <h3>Web3 developer</h3>
               <div class="project-subtitle">Swaap Finance</div>
@@ -108,6 +76,37 @@
                 <li>
                   React, Typescript, web3.js, ethers.js, Airtable, TheGraph...
                 </li>
+              </ul>
+            </div>
+          </section>
+
+          <section class="projects">
+            <h2>Projects</h2>
+
+            <div class="project">
+              <h3>Open source lead developer</h3>
+              <div class="project-subtitle">Masala Parser</div>
+              <div class="project-precisions">
+                <div class="project-dates">
+                  <i data-feather="calendar"></i>2013 - 2024
+                </div>
+                <div class="project-location">
+                  <i data-feather="map-pin"></i>Github, Remote
+                </div>
+              </div>
+              <p>
+                Based on the well-known Parsec library for Haskell, this tool
+                enables users to effortlessly create parsers, from simple regex
+                alternatives to fully featured compilers.
+              </p>
+
+              <ul class="project-items">
+                <li>Earned over 140 GitHub stars</li>
+                <li>
+                  Supported by 8 contributors, including experts in parsing and
+                  compiler design
+                </li>
+                <li>Typescript, CI/CD, TDD</li>
               </ul>
             </div>
 
@@ -241,6 +240,15 @@
           <h2>Skills</h2>
 
           <section class="skills">
+            <h3 class="skill-category">Blockchain</h3>
+
+            <ul class="skill-list">
+              <li>web3.js</li>
+              <li>ethers.js</li>
+              <li>Solidity</li>
+              <li>TheGraph</li>
+            </ul>
+
             <h3 class="skill-category">Backend</h3>
 
             <ul class="skill-list">
