feat: push with dirty cv and google analytics

--- a/public/nicolas/resume-crypto.html
+++ b/public/nicolas/resume-crypto.html
@@ -17,9 +17,9 @@
       <header>
         <h1>Nicolas Zozol</h1>
 
-        <section class="title">Principal Engineer & CTO for Startups</section>
+        <section class="title">Principal Engineer & Web3 Developer</section>
         <section class="title second-title">
-          Screened by Toptal - Oracle Certified Java Master
+          Freelancer, Screened by Toptal - Oracle Certified Java Master
         </section>
 
         <ul class="icon-list">
@@ -66,7 +66,7 @@
 
               <ul class="project-items">
                 <li>
-                  Grew the code from a demo to a multisite web3 platform
+                  Transformed the code from a demo to a multisite web3 platform
                   monorepo
                 </li>
                 <li>
@@ -82,6 +82,31 @@
 
           <section class="projects">
             <h2>Projects</h2>
+
+            <div class="project">
+              <h3>Happy Freelancer</h3>
+              <div class="project-subtitle">Robusta Build</div>
+              <div class="project-precisions">
+                <div class="project-dates">
+                  <i data-feather="calendar"></i>2007-Now
+                </div>
+                <div class="project-location">
+                  <i data-feather="map-pin"></i>Remote
+                </div>
+              </div>
+
+              <p>
+                Since becoming a freelancer, I’ve engaged in various startup
+                projects, worked with training agencies, created crypto bots in
+                2017, and joined Toptal's elite network in 2018.
+              </p>
+
+              <ul class="project-items">
+                <li>Web3, Solidity, CCXT</li>
+                <li>Java EE, Servlets, Glassfish</li>
+                <li>ReactJS, AngularJS, ExtJS, PrototypeJS</li>
+              </ul>
+            </div>
 
             <div class="project">
               <h3>Open source lead developer</h3>
@@ -185,30 +210,6 @@
               <ul class="project-items">
                 <li>Api design</li>
                 <li>ReactJS, D3.js</li>
-              </ul>
-            </div>
-
-            <div class="project">
-              <h3>Happy Freelancer</h3>
-              <div class="project-subtitle">Robusta Build</div>
-              <div class="project-precisions">
-                <div class="project-dates">
-                  <i data-feather="calendar"></i>2007-2024
-                </div>
-                <div class="project-location">
-                  <i data-feather="map-pin"></i>Remote
-                </div>
-              </div>
-
-              <p>
-                Since becoming a freelancer, I’ve engaged in various startup
-                projects, worked with training agencies, created crypto bots in
-                2017, and joined Toptal's elite network in 2018.
-              </p>
-
-              <ul class="project-items">
-                <li>Java EE, Servlets, Glassfish</li>
-                <li>ReactJS, AngularJS, ExtJS, PrototypeJS</li>
               </ul>
             </div>
 
