feat: adding pdf, responsive handling

--- a/public/nicolas/resume.html
+++ b/public/nicolas/resume.html
@@ -17,9 +17,9 @@
       <header>
         <h1>Nicolas Zozol</h1>
 
-        <section class="title">Principal Engineer & CTO for Startups</section>
+        <section class="title">Principal Engineer</section>
         <section class="title second-title">
-          Screened by Toptal - Oracle Certified Java Master
+          Oracle Certified Java Master - Screened by Toptal
         </section>
 
         <ul class="icon-list">
@@ -244,8 +244,8 @@
             <h3 class="skill-category">Backend</h3>
 
             <ul class="skill-list">
-              <li>API design</li>
-              <li>Java</li>
+              <li>Architecture</li>
+              <li>Java/Java EE</li>
               <li>Spring</li>
               <li>Node JS</li>
               <li>SQL</li>
