CV slight update

--- a/public/nicolas/resume.html
+++ b/public/nicolas/resume.html
@@ -17,7 +17,7 @@
       <header>
         <h1>Nicolas Zozol</h1>
 
-        <section class="title">Principal Engineer</section>
+        <section class="title">Senior Fullstack Engineer</section>
         <section class="title second-title">
           Oracle Certified Java Master - Screened by Toptal
         </section>
@@ -250,6 +250,7 @@
               <li>Node JS</li>
               <li>SQL</li>
               <li>PHP/Symfony</li>
+              <li>Python/Django</li>
               <li>MongoDB</li>
             </ul>
 
@@ -262,6 +263,15 @@
               <li>CSS/SASS</li>
               <li>Styled Component</li>
               <li>Responsive Design</li>
+            </ul>
+
+            <h3 class="skill-category">Blockchain</h3>
+
+            <ul class="skill-list">
+              <li>web3.js</li>
+              <li>ethers.js</li>
+              <li>Solidity</li>
+              <li>TheGraph</li>
             </ul>
           </section>
 
