--- a/public/nicolas/resume-fr.html
+++ b/public/nicolas/resume-fr.html
@@ -274,8 +274,10 @@
               <li>Spring</li>
               <li>Node JS</li>
               <li>PHP/Symfony</li>
+              <li>Python/Django</li>
               <li>SQL/PostgreSQL</li>
               <li>MongoDB</li>
+              <li>Architecture</li>
             </ul>
 
             <h3 class="skill-category">Frontend</h3>
