feat: updating Renault and Swaap

--- a/public/nicolas/resume-fr.html
+++ b/public/nicolas/resume-fr.html
@@ -188,6 +188,7 @@
                 <li>
                   Encadrement de jeunes développeurs maintenus sur le projet
                 </li>
+                <li>Plus de 500 projets gérés, 250 000 accès autorisés</li>
                 <li>ReactJS, CQRS</li>
               </ul>
             </div>
