--- a/public/nicolas/resume.html
+++ b/public/nicolas/resume.html
@@ -102,8 +102,8 @@
                   monorepo
                 </li>
                 <li>
-                  Grew the TVL from 0 to 5M$ in a competitive and immature
-                  ecosystem
+                  Grew the TVL from 0 to 5M$ and monthly traded volume to more
+                  than 1 billion dollars
                 </li>
                 <li>
                   React, Typescript, web3.js, ethers.js, Airtable, TheGraph...
